--- a/backend/package.json
+++ b/backend/package.json
@@ -20,7 +20,9 @@
     "mongoose": "^8.16.1",
     "nodemon": "^3.1.10",
     "passport": "^0.7.0",
+    "passport-custom": "^1.1.1",
     "passport-google-oauth20": "^2.0.0",
+    "passport-oauth2": "^1.8.0",
     "passport-reddit": "^1.1.0"
   }
 }
