--- a/backend/package.json
+++ b/backend/package.json
@@ -11,18 +11,23 @@
     "dev": "nodemon server.js"
   },
   "dependencies": {
+    "@google/generative-ai": "^0.24.1",
+    "@sokratis/passport-linkedin-oauth2": "^2.1.0",
     "axios": "^1.10.0",
     "cors": "^2.8.5",
     "dotenv": "^17.0.1",
     "ejs": "^3.1.10",
     "express": "^5.1.0",
-    "express-session": "^1.18.1",
+    "express-session": "^1.18.2",
+    "googleapis": "^157.0.0",
     "mongoose": "^8.16.1",
     "nodemon": "^3.1.10",
     "passport": "^0.7.0",
     "passport-custom": "^1.1.1",
     "passport-google-oauth20": "^2.0.0",
+    "passport-linkedin": "^1.0.0",
     "passport-oauth2": "^1.8.0",
-    "passport-reddit": "^1.1.0"
+    "passport-reddit": "^1.1.0",
+    "qs": "^6.14.0"
   }
 }
