--- a/backend/package.json
+++ b/backend/package.json
@@ -14,12 +14,14 @@
     "@google/generative-ai": "^0.24.1",
     "@sokratis/passport-linkedin-oauth2": "^2.1.0",
     "axios": "^1.10.0",
+    "bcryptjs": "^3.0.2",
     "cors": "^2.8.5",
     "dotenv": "^17.0.1",
     "ejs": "^3.1.10",
     "express": "^5.1.0",
     "express-session": "^1.18.2",
     "googleapis": "^157.0.0",
+    "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.16.1",
     "nodemon": "^3.1.10",
     "passport": "^0.7.0",
