change login and sign up logic to jwt ,  set youtube o auth from backend and show in frontend

--- a/frontend/.env
+++ b/frontend/.env
@@ -1,1 +1,2 @@
 VITE_BACKEND_URL=http://localhost:5000
+VITE_GOOGLE_CLIENT_ID=963750414411-de3tbc011hc9air9el6jehafqnomfms7.apps.googleusercontent.com.apps.googleusercontent.com
