--- a/backend/package.json
+++ b/backend/package.json
@@ -28,6 +28,7 @@
     "passport-custom": "^1.1.1",
     "passport-google-oauth20": "^2.0.0",
     "passport-linkedin": "^1.0.0",
+    "passport-local": "^1.0.0",
     "passport-oauth2": "^1.8.0",
     "passport-reddit": "^1.1.0",
     "qs": "^6.14.0"
