--- a/frontend/.env
+++ b/frontend/.env
@@ -1,2 +1,3 @@
 VITE_BACKEND_URL=http://localhost:5000
+VITE_FRONTEND_URL=http://localhost:5173
 VITE_GOOGLE_CLIENT_ID=963750414411-de3tbc011hc9air9el6jehafqnomfms7.apps.googleusercontent.com.apps.googleusercontent.com
